[package]
name = "wks"
version = "0.0.1"
edition = "2024"
authors = ["Axlefublr"]
license = "MIT"
description = "Collection of my itty bitty rust scripts"
readme = "README.md"
homepage = "https://github.com/Axlefublr/wks"
repository = "https://github.com/Axlefublr/wks"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive", "wrap_help"] }
console = "0.16.2"
dirs = "6.0.0"
itertools = "0.14.0"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
